--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,8 +6,18 @@ html, body {
 }
 
 .canvas-container {
-    width: 1900px;
-    height: 960px;
+    width: 100%;
+    height: 100%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.value-display {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 10%;
+    height: 30%;
+    border: 1px solid black;
+    text-align: center;
 }
