--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,7 @@ html, body {
     height: 100%;
     margin-left: auto;
     margin-right: auto;
+    background-color: rgb(45, 45, 45);
 }
 
 .value-display {
@@ -19,5 +20,6 @@ html, body {
     width: 10%;
     height: 30%;
     border: 1px solid black;
+    background-color: white;
     text-align: center;
 }
