--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,10 +15,10 @@ html, body {
 
 .value-display {
     position: absolute;
-    top: 5px;
-    left: 5px;
-    width: 10%;
-    height: 30%;
+    top: 10px;
+    left: 10px;
+    width: 160px;
+    height: 200px;
     border: 1px solid black;
     background-color: white;
     text-align: center;
