--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,5 +21,6 @@ html, body {
     height: 50px;
     border: 1px solid black;
     background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
