--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,22 @@ html, body {
     padding: 0;
 }
 
+#site-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 .canvas-container {
     width: 100%;
     height: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    box-sizing: border-box;
     background-color: rgb(255, 247, 247);
+}
+
+.canvas-container canvas {
+    width: 100%;
+    height: 100%;
 }
 
 .value-display {
