--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,14 @@ html, body {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    font-family: 'Proza Libre', Arial, sans-serif;
 }
 
 .canvas-container {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-    background-color: rgb(255, 247, 247);
+    background-color: rgb(236, 236, 236);
 }
 
 .canvas-container canvas {
@@ -23,14 +24,11 @@ html, body {
     height: 100%;
 }
 
-.value-display {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 160px;
-    height: 50px;
-    border: 1px solid black;
+#ui {
+    position: fixed;
+    top: 1em;
+    left: 1em;
     background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+    padding: 1em;
+    border-radius: 5px;
 }
